2005-05-27  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/post.trm: Fix incorrect fprintf statement that was causing
	compiler warnings.

2005-05-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gplt_x11.c: Lots of coding style changes, mainly missing
	blanks after commas.
	(main) [USE_X11_MULTIBYTE]: Reset LC_NUMERIC locale to "C", after
	all others have been set to the user's selection for purposes of
	multi-byte font support.
	
2005-05-25  Daniel Sebald  <daniel.sebald@ieee.org>

	SF Patch [ 1117060 ] Mod to post.trm for PostScript Level 1 images.

	* term/post.trm: New routine PS_encode_image(), new postscript variable
	InterpretLevel1 and some other changes.

2005-05-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/tables.c: Allow shorthand for "set macros".

	* src/term_api.h term/README: Add new terminal flag TERM_NO_OUTPUTFILE.

	* src/term.c (term_init): As per discussion on gnuplot-beta, when
	changing to a new terminal type, check flags for TERM_NO_OUTPUTFILE
	associated with the new type.  If present, then close current output
	file cleanly rather than reopening and overwriting it.
	Fixes bug #1182499.

	* term/x11.trm term/win.trm term/pm.trm term/be.trm term/aquaterm.trm:
	Mark terminal as TERM_NO_OUTPUTFILE.


2005-05-23  Ethan Merritt  <merritt@u.washington.edu>

	* term/estimate.trm (ENHest_put_text): Track estimated limits on
	string y extent also.

2005-05-22  Peter Weilbacher <paepse@users.sourceforge.net>

	* src/gp_hist.h src/readline.c: Fix conditional dependencies on
	READLINE and HAVE_LIBREADLINE so that ./configure + build is
	clean with all three readline options.

2005-05-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm term/mif.trm term/pdf.trm: Code cleanup - remove static
	initializers from the TERM_PROTO code block. ggi.trm has these also,
	but I can't test for correctness after a change so I don't want to 
	change it. Remove obsolete comments.
